--- a/index.html
+++ b/index.html
@@ -3,97 +3,41 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Your Name - Curriculum Vitae</title>
-    <style>
-        body {
-            font-family: Arial, sans-serif;
-            margin: 20px;
-        }
-
-        header {
-            text-align: center;
-            margin-bottom: 20px;
-        }
-
-        h1 {
-            color: #333;
-        }
-
-        h2 {
-            color: #555;
-        }
-
-        .section {
-            margin-bottom: 20px;
-        }
-
-        .section h2 {
-            border-bottom: 2px solid #333;
-            padding-bottom: 5px;
-        }
-
-        .info {
-            display: flex;
-            justify-content: space-between;
-        }
-
-        .info p {
-            margin: 5px 0;
-        }
-
-        .education,
-        .experience {
-            margin-bottom: 20px;
-        }
-    </style>
+    <title>Document</title>
 </head>
 <body>
-
-    <header>
-        <h1>Your Name</h1>
-        <p>Web Developer</p>
-    </header>
-
-    <section class="section education">
-        <h2>Education</h2>
-        <div class="info">
-            <div>
-                <p><strong>Degree in Computer Science</strong></p>
-                <p>University Name, Graduation Year</p>
-            </div>
-        </div>
-    </section>
-
-    <section class="section experience">
-        <h2>Work Experience</h2>
-        <div class="info">
-            <div>
-                <p><strong>Web Developer</strong></p>
-                <p>Company Name, Start Date - End Date</p>
-            </div>
-        </div>
-    </section>
-
-    <section class="section skills">
-        <h2>Skills</h2>
-        <ul>
-            <li>HTML5, CSS3, JavaScript</li>
-            <li>React, Node.js</li>
-            <li>Version Control (Git)</li>
-        </ul>
-    </section>
-
-    <section class="section contact">
-        <h2>Contact Information</h2>
-        <div class="info">
-            <div>
-                <p>Email: your.email@example.com</p>
-                <p>Phone: (123) 456-7890</p>
-                <p>LinkedIn: linkedin.com/in/yourname</p>
-                <p>GitHub: github.com/yourusername</p>
-            </div>
-        </div>
-    </section>
-
+    
 </body>
 </html>
+<style>
+    strong {
+     color: red;
+    h1 {
+        color: pink;
+    }
+    </style>
+
+</head>
+<body>
+<h1>Table Of Content</h1>
+<ol>
+    <li><a href="# Internet">Internet</a></li>
+    <li><a href="# Layout">Layout</a></li>
+    <li><a href="# Linear Layout">Linear Layout</a></li>
+    <li><a href="# Pathname">Pathname</a></li>
+</ol>
+<hr>
+<strong id="Internet">Internet</strong>
+<p>The Internet is a network of networks. That is, computer networks are linked to other networks, spanning countries and today the globe.
+    The TCP/IP transfer protocol provides the bindings that connect all these computers the world over. A web page is not a printed page.
+    That is, the guidelines that are applie/p print may not apply to a web page. Avoid making the reader sean too much of the screen while reading the page. After a while it puts strain on the eyes, and the reader may lose interest. Text should be contained within a few inches width. A web page is not a printed page. That 15, the guidelines that are appited to print may not apply to a web page. Avoid making the reader sean too much of the screen while reading the page. After a while it puts a strain on the eyes. and the reader may lose interest.
+    Text should be contained within a few inches width. A web page is not a printed page. That is the guidelines that are applied to print may not apply to a web page. Avoid making the reader scan too much of the sereen while reading the page. After a while it puts a strain on the eyes, and the reader may lose interest. Text should be contained within a few inches width.
+    Layout
+    A web page is not a printed page. That is. the guidelines that are applied to print may not apply to a web page. Avoid making the reader scan too much of the screen while reading the page. After a while it puts a strain on the eyes. and the reader may lose interest. Text should be contained within a few inches width. A web page is not a printed page. That is. the guidelines that are applied to print may not
+    Figure 5.2</p>
+<strong id="Layot">Layout</strong>
+<p>A web page is not a printed page. That is, the guidelines that are applied to print may not apply to a web page. Avoid making the reader scan too much of the screen while reading the page. After a while it puts a strain on the eyes, and the reader may lose interest. Text should be contained within a few inches width. A web page is not a vinted page. That is. the guidelines that are applied to print may not apply to a web page. Avoid making the reader sean too much of the reen while reading the page. After a while it puts a strain on the eyes, and the reader may lose interest. Text should be contained within a few inches width. A web page is not a printed page. That is. the guidelines that are applied to print may not apply to a web page. Avoid making the reader sean too much of the screen while reading the page. After a while it puts a strain on the eyes. and the reader may lose interest. Text should be contained within a few inches width. A web page is not a printed page. That is. the guidelines that are applied to print may not apply to a web page. Avoid making the reader sean too much of the screen while reading the page. After a while it puts a stmin on the eyes, and the reader may lose interest. Text should be contained within a few inches width. A web page is not a printed page. That is, the guidelines that are applied to print may not apply to a web page, Avoid making the reader scan too much of the screen while reading the page. After a while it puts a strain on the eyes. and the reader may lose interest. Text should be contained within a less inches width.</p>
+    <strong id="Linear Layout">Linear Layout</strong>
+    <p>Nguyễn Mạnh</p>
+    <strong id="Pathname">Pathname</strong>
+    <p>Hưng</p>
