--- a/3index.html
+++ b/3index.html
@@ -1,1 +1,34 @@
-
+<!doctype html>
+<html>
+<head>
+<meta charset="utf-8">
+<meta name="viewpoint" content="width=device-width, initial-scaled=1.0">
+<title>Create product list with CSS3</title>
+<style type="text/css">
+    .Thongtinsv {display: none;}
+    .Anhsv img { 
+        width: 150px;
+        height: 150px;
+        border-radius: 20px;
+        box-shadow: 5px 5px 10px #aaa;
+    }
+    .Tensv {font-weight: bold;}
+    .MSSV {font-style: italic;}
+    .MSSV::before {content: " - ";}
+    .Anhsv {
+        text-align: center;
+        width: 150px;
+        margin: 0px 20px;
+        float: left;
+        cursor: pointer;
+    }
+    .Anhsv:hover 
+    .Thongtinsv {display: block;}
+</style>
+</head>
+<body>
+    <div class="AnhSC">
+        <img src="z4309180082872_6aae028598b5f9449e1ee30aee075d8f.jpg">
+    </div>
+</body>
+</html>19:43/-strong/-heart:>:o:-((:-hXem trước khi gửiThả Files vào đây để xem lại trước khi gửi
