--- a/4index.html
+++ b/4index.html
@@ -1,1 +1,92 @@
+<!DOCTYPE html>
+<html lang="en">
+<head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>News Website</title>
+    <link rel="stylesheet" href="style.css">
+</head>
+<style>
+    <style>
+    body {
+    font-family: Arial, sans-serif;
+    margin: 0;
+    padding: 0;
+}
 
+header {
+    background-color: #333;
+    color: #fff;
+    text-align: center;
+    padding: 20px 0;
+}
+
+nav ul {
+    list-style-type: none;
+    padding: 0;
+    text-align: center;
+}
+
+nav ul li {
+    display: inline;
+    margin-right: 20px;
+}
+
+nav ul li a {
+    text-decoration: none;
+    color: #333;
+    font-weight: bold;
+}
+
+main {
+    padding: 20px;
+}
+
+article {
+    margin-bottom: 30px;
+}
+
+footer {
+    background-color: #333;
+    color: #fff;
+    text-align: center;
+    padding: 10px 0;
+    position: fixed;
+    bottom: 0;
+    width: 100%;
+}
+</style>
+</style>
+<body>
+    <header>
+        <h1>Thời sự hôm nay</h1>
+    </header>
+    <nav>
+        <ul>
+            <li><a href="#article1">Bài báo 1</a></li>
+            <li><a href="#article2">Bài báo 2</a></li>
+            <li><a href="#article3">Bài báo 3</a></li>
+        </ul>
+    </nav>
+    <main>
+        <article id="article1">
+            <h2>Bài báo 1</h2>
+            <p>Đây là nội dung của bài báo 1...</p>
+            <p>Ngày đăng: 15/03/2024</p>
+        </article>
+        <article id="article2">
+            <h2>Bài báo 2</h2>
+            <p>Đây là nội dung của bài báo 2...</p>
+            <p>Ngày đăng: 15/03/2024</p>
+        </article>
+        <article id="article3">
+            <h2>Bài báo 3</h2>
+            <p>Đây là nội dung của bài báo 3...</p>
+            <p>Ngày đăng: 15/03/2024</p>
+        </article>
+    </main>
+    <footer>
+        <p>&copy; 2024 News Website</p>
+    </footer>
+</body>
+</html>
