--- a/0index.html
+++ b/0index.html
@@ -1,1 +1,21 @@
-
+<!DOCTYPE html>
+<html lang="en">
+<head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial">
+    <title>Document</title>
+</head>
+<body>
+    <input type="text" id="name">
+    <button onclick="xinchao();">
+        Xin chao
+    </button>
+</body>
+<script>
+    function xinchao() {
+        var name = document.getElementById('name').value;
+        alert('Xin chao ' + name + '!');
+        alert('Chuc ' + name + ' ngay moi vui ve');
+    }
+</script>
+</html>
