--- a/0index.html
+++ b/0index.html
@@ -6,16 +6,25 @@
     <title>Document</title>
 </head>
 <body>
-    <input type="text" id="name">
-    <button onclick="xinchao();">
-        Xin chao
+    <input type="text" id="txta">
+    <input type="text" id="txtb">
+    <button onclick="tongab();">
+        Tinh tong
     </button>
 </body>
 <script>
-    function xinchao() {
-        var name = document.getElementById('name').value;
-        alert('Xin chao ' + name + '!');
-        alert('Chuc ' + name + ' ngay moi vui ve');
+    function tongab() {
+        var txta = document.getElementById('txta').value;
+        var txtb = document.getElementById('txtb').value;
+        if (txta == null || txta == '' || isNaN(txta)) {
+            alert('Vui long nhap so a hop le');
+            return;
+        }
+        if (txtb == null || txtb == '' || isNaN(txtb)) {
+            alert('Vui long nhap so b hop le');
+            return;
+        }
+        alert(parseInt(txta) + parseInt(txtb)); 
     }
 </script>
 </html>
