--- a/3index.html
+++ b/3index.html
@@ -3,8 +3,8 @@
 <head>
 <meta charset="utf-8">
 <meta name="viewpoint" content="width=device-width, initial-scaled=1.0">
-<title>Create product list with CSS3</title>
-<style type="text/css">
+ with CSS3</title>
+<style type=<title>Create product list"text/css">
     .Thongtinsv {display: none;}
     .Anhsv img { 
         width: 150px;
