--- a/Wireframe.html
+++ b/Wireframe.html
@@ -1,1 +1,32 @@
+<html>
+  <head>
+    <title>Page Title</title>
+  </head>
+  <body>
+    <header>
+      <h1>Site Title</h1>
+      <nav>
+        <ul>
+          <li><a href="#">Link 1</a></li>
+          <li><a href="#">Link 2</a></li>
+        </ul>
+      </nav>
+    </header>
 
+    <main>
+      <section>
+        <h2>Section Title</h2>
+        <p>Section content goes here...</p>
+      </section>
+
+      <section>
+        <h2>Another Section Title</h2>
+        <p>More section content goes here...</p>
+      </section>
+    </main>
+
+    <footer>
+      <p>Copyright information</p>
+    </footer>
+  </body>
+</html>
