--- a/Wireframe.html
+++ b/Wireframe.html
@@ -1,32 +1,20 @@
+<!DOCTYPE html>
 <html>
-  <head>
-    <title>Page Title</title>
-  </head>
-  <body>
-    <header>
-      <h1>Site Title</h1>
-      <nav>
-        <ul>
-          <li><a href="#">Link 1</a></li>
-          <li><a href="#">Link 2</a></li>
-        </ul>
-      </nav>
-    </header>
+<head>
+  <title>Rocket Crossing</title>
+  <link rel="stylesheet" type="text/css" href="style.css">
+</head>
+<body>
+  <div id="rocketContainer">
+    <img id="rocket" src="rocket.png">
+  </div>
 
-    <main>
-      <section>
-        <h2>Section Title</h2>
-        <p>Section content goes here...</p>
-      </section>
+  <div id="inputContainer">
+    <label for="speedInput">Enter speed (in pixels/second):</label>
+    <input type="number" id="speedInput" min="1">
+    <button id="startButton" onclick="startRocket()">Start</button>
+  </div>
 
-      <section>
-        <h2>Another Section Title</h2>
-        <p>More section content goes here...</p>
-      </section>
-    </main>
-
-    <footer>
-      <p>Copyright information</p>
-    </footer>
-  </body>
+  <script src="script.js"></script>
+</body>
 </html>
